--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="knockout-3.2.0.js"></script>
     <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-    <input type="text" id="displayID" /><br />
     <div id="container">
-        <script type="text/javascript">
-            for(i = 0; i < GRID_SIZE; i++) {
-                document.write('<div class="row">');
-                for(j = 0; j < GRID_SIZE; j++) {
-                    document.write('<span class="cell" id="'+i+j+'"></span>');
-                } 
-                document.write('</div>');
-            }
-        </script>
+        <p>Battleships</p>
+        <div id="battlegrid">
+            <script type="text/javascript">
+                for(i = 0; i < GRID_SIZE; i++) {
+                    document.write('<div class="row">');
+                    for(j = 0; j < GRID_SIZE; j++) {
+                        document.write('<span class="cell" id="'+i+j+'"></span>');
+                    } 
+                    document.write('</div>');
+                }
+            </script>
+        </div>
+        <div id="controls">
+            <p><strong data-bind="text: instructions"></strong></p>
+            <ul data-bind="foreach: ships">
+                <li data-bind="text: ship.shipType, strikeShip: placed()"></li>
+            </ul>
+            <button data-bind="click: play">Play</button><br />        
+        </div>
     </div>
 </body>
 </html>
