--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div id="controls">
             <p><strong data-bind="text: instructions"></strong></p>
             <ul data-bind="foreach: ships">
-                <li data-bind="text: ship.shipType, strikeShip: placed()"></li>
+                <li data-bind="text: ship.shipType+' ('+ship.shipSize+')', strikeShip: placed()"></li>
             </ul>
-            <button data-bind="toggleButton: {enable: placedShips() == SHIPS.length}">Play</button><br />        
+            <button data-bind="enable: placedShips() == SHIPS.length, click: play">Play</button><br />        
         </div>
     </div>
 </body>
