Implemented basic mouse events for placing ships

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 for(i = 0; i < GRID_SIZE; i++) {
                     document.write('<div class="row">');
                     for(j = 0; j < GRID_SIZE; j++) {
-                        document.write('<span class="cell" id="'+i+j+'"></span>');
+                        document.write('<span class="cell" id="'+i+j+'">'+i+j+'</span>');
                     } 
                     document.write('</div>');
                 }
